tuned media querise, fix for 2022 jumping around depending on width

--- a/css/base.css
+++ b/css/base.css
@@ -84,8 +84,9 @@ btn:visited {
   font-weight: var(--font-bold);
   font-size: 1.8rem;
   padding: 1.5rem;
-  border-radius: 20rem;
-  box-shadow: 0 1rem 2rem rgba(22, 0, 30, 0.3);
+  /* border-radius: 20rem; */
+  transform: skewX(-12deg);
+  box-shadow: 1rem 1rem 2rem rgba(22, 0, 30, 0.3);
   min-width: 15rem;
   border: none;
   cursor: pointer;
@@ -94,11 +95,11 @@ btn:visited {
 
 .btn:hover {
   transform: translateY(-3px);
-  box-shadow: 0 2rem 2rem rgba(22, 0, 30, 0.2);
+  box-shadow: 2rem 2rem 2rem rgba(22, 0, 30, 0.2);
 }
 .btn:active {
   transform: translateY(-1px);
-  box-shadow: 0 1rem 2rem rgba(22, 0, 30, 0.4);
+  box-shadow: 1rem 1rem 2rem rgba(22, 0, 30, 0.4);
 }
 
 .btn--light {
@@ -113,7 +114,7 @@ btn:visited {
   background-color: inherit;
   height: 100%;
   width: 100%;
-  border-radius: 10rem;
+  /* border-radius: 10rem; */
   position: absolute;
   top: 0;
   left: 0;
