--- a/css/navigation.css
+++ b/css/navigation.css
@@ -178,3 +178,12 @@
   top: 0;
   transform: rotate(-135deg);
 }
+
+@media only screen and (max-width: 75em) {
+  .navigation__btn {
+    top: 5rem;
+  }
+  .navigation__popin {
+    top: 5.5rem;
+  }
+}
